--- a/LoLApp/build.gradle
+++ b/LoLApp/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
     buildTypes {
         release {
             runProguard false
@@ -18,8 +19,10 @@ android {
     }
 }
 
+
 dependencies {
     compile 'com.android.support:support-v4:19.+'
-    compile 'com.mcxiaoke.volley:library-aar:1.0.0'
+    compile 'com.android.support:appcompat-v7:19.+'
     compile 'com.google.code.gson:gson:2.2.+'
+    compile files('libs/volley.jar')
 }
