--- a/LoLApp/src/main/AndroidManifest.xml
+++ b/LoLApp/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.stanford.lolapp" >
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:name="com.stanford.lolapp.LoLApp"
         android:allowBackup="true"
@@ -13,18 +11,34 @@
         <activity
             android:name="com.stanford.lolapp.activities.MainActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.stanford.lolapp.activities.LoginActivity"
+            android:label="@string/title_activity_login"
+            android:windowSoftInputMode="adjustResize|stateVisible" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <receiver
-            android:name="com.stanford.lolapp.dialogs.MyReceiver"
-            android:enabled="true"
-            android:exported="true" >
-        </receiver>
+        <activity
+            android:name="com.stanford.lolapp.activities.CreateUserActivity"
+            android:label="@string/title_activity_create_user"
+            android:parentActivityName="com.stanford.lolapp.activities.LoginActivity"
+            android:windowSoftInputMode="adjustResize|stateVisible" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="LoginActivity" />
+        </activity>
     </application>
+
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.USE_CREDENTIALS" />
+    <uses-permission android:name="android.permission.NETWORK" />
 
 </manifest>
