--- a/LoLApp/build.gradle
+++ b/LoLApp/build.gradle
@@ -11,6 +11,11 @@ android {
         versionName "1.0"
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+
     buildTypes {
         release {
             runProguard false
@@ -18,8 +23,6 @@ android {
         }
     }
 }
-
-
 
 dependencies {
     compile files('libs/volley.jar')
