--- a/LoLApp/src/main/AndroidManifest.xml
+++ b/LoLApp/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.stanford.lolapp" >
+    package="com.stanford.lolapp"
+    android:versionCode="1"
+    android:versionName="Debug Build">
 
     <application
         android:name=".LoLApp"
